提交吐司Toast的简单使用

--- a/_posts/2019/2019-08-14-Button.md
+++ b/_posts/2019/2019-08-14-Button.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 title: Button
-category: Button
-tags: [Button]
+category: Layout
+tags: [Layout]
 excerpt: Button
 ---
 
-##1、属性 ##
+## 1、属性 ##
 
 android:id是给当前元素定义一个唯一的标识
 
@@ -18,6 +18,18 @@ android:layout_height指定当前元素的高度
 	warp_parent表示当前元素的高度只要能刚好包含里面的内容就行
 
 android：text指定当前元素中显示的文字内容
+
+
+## 2、使用 ##
+
+findViewById（）传入xml中定义的唯一的标识返回Button对象
+
+
+## 3、按钮点击事件 ##
+
+setOnClickListener()方法为按钮注册一个监听器，点击按钮会执行监听器中的OnClick()方法。
+
+
 
 
 
