--- a/_posts/2019/2019-08-14-Toast.md
+++ b/_posts/2019/2019-08-14-Toast.md
@@ -6,18 +6,18 @@ tags: [Other]
 excerpt: Toast
 ---
 
-##1、属性 ##
+## 1、使用 ##
 
-android:id是给当前元素定义一个唯一的标识
+Toast.makeText(context,"",Toast.LENGTH_SHORT).show();
 
-android:layout_width指定当前元素的宽度
+第一个参数是Context，上下文
 
-android:layout_height指定当前元素的高度
+第二个参数是要显示的文本内容
 
-	match_parent表示让当前元素和父元素一样宽
-	warp_parent表示当前元素的高度只要能刚好包含里面的内容就行
+第三个参数是显示时长，有两个内置常量可以选择
 
-android：text指定当前元素中显示的文字内容
+	Toast.LENGTH_SHORT
+	Toast.LENGTH_LONG
 
 
 
