安装和使用mysql数据库时遇到的问题整理

--- a/_posts/2019/2019-08-12-mysqlcz.md
+++ b/_posts/2019/2019-08-12-mysqlcz.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Mysql全局变量
+title: mysql全局变量
 category: Linux
 tags: [Linux]
 excerpt: Mysql全局变量
@@ -13,3 +13,6 @@ excerpt: Mysql全局变量
 
     SET GLOBAL max_allowed_packet=53687091200; 
 
+### 3、生成mysql文件的命令
+
+	mysqldump -u用户名 -p密码 数据库名 > 数据库名.sql
