提交redis和mongodb安装及使用时遇到的问题

--- a/_posts/2019/2019-08-12-mysqlcz.md
+++ b/_posts/2019/2019-08-12-mysqlcz.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: mysql全局变量
+title: mysql基本操作
 category: Linux
 tags: [Linux]
-excerpt: Mysql全局变量
+excerpt: Mysql基本操作
 ---
 ### 1、查看全局变量   ###
 
