更新博客标题

--- a/_posts/2019/2019-08-15-rediscz.md
+++ b/_posts/2019/2019-08-15-rediscz.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Mongodb基本操作
+title: Redis基本操作
 category: Linux
 tags: [Linux]
-excerpt: Mongodb基本操作
+excerpt: Redis基本操作
 ---
 ## 1、Redis设置密码登录 ##
 
