--- a/_posts/2019/2019-08-22-5G.md
+++ b/_posts/2019/2019-08-22-5G.md
@@ -5,8 +5,30 @@ category: Other
 tags: [Other]
 excerpt: 1-5G概念
 ---
+## 1-5G概念 ##
 
-|  表头   | 表头  |表头  |
-|  ----  | ----  |----  |
-| 单元格  | 单元格 |单元格 |
-| 单元格  | 单元格 |单元格 |
+1G 大哥大 意味着富有 土豪. 只能进行语音通话.
+
+2G 小灵通 gsm 不仅可以语音通话 发个短信 彩信.wap.baidu.com
+
+3G 中国联通 选3G就选沃 www.baidu.com 7.2M/s
+
+4G 中国移动 100M/s 4G 又称 lte，全称是4th Generation, 第四代移动电话行动通信标准,是第四代移动通信技术. 
+
+5G 华为在研发 10G/s
+
+总结:采用标准和速度不同. 
+
+
+
+
+## 移动通信技术 ##
+|     | 通信标准  | 
+|  ----  | ----  |
+| 1G  | 模拟制式 |
+| 2G  | GSM/CDMA |
+| 2.5G  | GPRS |
+| 2.75G  | EDGE |
+| 3G  | WCDMA/CDMA2000/TD-SCDMA |
+| 3.5G/3.75G  | HSDPA/HSDPA+/HSUDA |
+| 4G  | TD-LTE |
