更新网站显示问题

--- a/_posts/2019/2019-08-09-npm.md
+++ b/_posts/2019/2019-08-09-npm.md
@@ -17,4 +17,6 @@ excerpt: npm指定安装路径
 ### 3、在使用npm安装程序时在后面加一个参数-g即可将安装的程序安装到我们指定的目录 ###
 
 
-参考网站：https://blog.csdn.net/friendan/article/details/50830671/
+参考网站：
+
+<https://blog.csdn.net/friendan/article/details/50830671/>
