--- a/_posts/2019/2019-08-15-WS2008 Install.md
+++ b/_posts/2019/2019-08-15-WS2008 Install.md
@@ -11,7 +11,7 @@ excerpt: VMware虚拟机安装windows server 2008图文步骤
 
 windows server 2008 R2镜像及激活工具下载
 
-链接：https://pan.baidu.com/s/13sIBE8pVBmR27IGjqs8cFw 提取码：d16f
+链接：<https://pan.baidu.com/s/13sIBE8pVBmR27IGjqs8cFw> 提取码：d16f
 
 ## 2、打开VMware虚拟机主界面，点击创建新的虚拟机 ##
 
