--- a/_posts/2019/2019-08-22-adb.md
+++ b/_posts/2019/2019-08-22-adb.md
@@ -8,6 +8,375 @@ excerpt: Adb配置及命令
 
 ## 一、Adb环境变量的配置 ##
 
+### 1、打开环境变量配置窗口，如下图，右键计算机，属性--高级系统设置--环境变量 ###
+
+属性
+
+![](http://www.nangongyibin.com/assets/images/adb1.png)
+
+高级系统变量；环境变量；
+
+![](http://www.nangongyibin.com/assets/images/adb2.png)
+
+### 2、找到SDK里tools和platform-tools的文件路径，之后有用；如图 ###
+
+![](http://www.nangongyibin.com/assets/images/adb3.png)
+
+![](http://www.nangongyibin.com/assets/images/adb4.png)
+
+### 3、回到第一步进入的环境变量界面，如图，在下方的系统变量中新建 ###
+
+![](http://www.nangongyibin.com/assets/images/adb5.png)
+
+变量名（N）：android
+
+变量值（V）:就是第二步中tools和platform-tools的文件完整路径，中间英文的分号“;”隔开，点击确定。如图：
+
+![](http://www.nangongyibin.com/assets/images/adb6.png)
+
+### 4、在Path中添加刚刚的环境，选择系统变量Path，点击编辑，如图 ###
+
+![](http://www.nangongyibin.com/assets/images/adb7.png)
+
+在Path的变量值中加：%android%
+
+![](http://www.nangongyibin.com/assets/images/adb8.png)
+
+### 5、测试是否成功；win+R ,进入命令行，cmd，回车 ###
+
+![](http://www.nangongyibin.com/assets/images/adb9.png)
+
+输入adb，如图，这样就表示成功配置了adb环境变量
+
+![](http://www.nangongyibin.com/assets/images/adb10.png)
+
+
+## 二、命令 ##
+
+### 1、查询已连接设备/模拟器 ###
+
+    adb devices
+
+### 2、启动 adb server 命令 ###
+
+    adb start-server
+
+### 3、停止 adb server 命令 ###
+
+    adb kill-server
+
+### 4、查看 adb 版本 ###
+
+    adb version
+
+### 5、安装 APK ###
+
+    adb install + apk名
+
+|  参数   | 含义  | 
+|  ----  | ----  |
+| -l  | 将应用安装到保护目录 /mnt/asec |
+| -r  | 允许覆盖安装 |
+| -t  | 允许安装 AndroidManifest.xml 里 application 指定 android:testOnly="true" 的应用 |
+| -s  | 将应用安装到 sdcard |
+| -d  | 允许降级覆盖安装 |
+| -g  | 授予所有运行时权限 |
+
+### 5、卸载应用 ###
+
+    adb uninstall + 包名
+
+### 6、复制设备里的文件到电脑 ###
+
+    adb pull <设备里的文件路径> [电脑上的目录]
+
+### 7、复制电脑里的文件到设备 ###
+
+    adb push <电脑上的文件路径> <设备里的目录> 
+
+### 8、快速挂载到手机终端 ###
+
+    adb shell
+
+ctrl + d从终端退出
+
+### 9、查看应用列表 ###
+
+	adb shell pm list packages
+
+
+|  参数   | 显示列表  | 
+|  ----  | ----  |
+| 无  | 所有应用 |
+| -f  | 显示应用关联的 apk 文件 |
+| -d  | 只显示 disabled 的应用 |
+| -e  | 只显示 enabled 的应用 |
+| -s  | 只显示系统应用 |
+| -3  | 只显示第三方应用 |
+| -i  | 显示应用的 installer |
+| -u  | 包含已卸载应用 |
+| -i  | 显示应用的 installer |
+| <FILTER>  | 包名包含 <FILTER> 字符串 |
+
+### 10、清除应用数据与缓存 ###
+
+    adb shell pm clear <packagename>
+
+### 11、查看前台 Activity ###
+
+	adb shell dumpsys activity activities
+
+### 12、查看正在运行的 Services ###
+
+    adb shell dumpsys activity services [<packagename>]
+
+### 13、查看应用详细信息 ###
+
+	adb shell dumpsys package <packagename>
+
+### 14、强制停止应用 ###
+
+	adb shell am force-stop <packagename>
+
+### 15、模拟按键/输入 ###
+
+	adb shell input keyevent+keycode
+
+
+|  keycode   | 含义  | 
+|  ----  | ----  |
+| 3  | HOME 键 |
+| 4  | 返回键 |
+| 5  | 打开拨号应用 |
+| 6  | 挂断电话 |
+| 24  | 增加音量 |
+| 25  | 降低音量 |
+| 26  | 电源键 |
+| 27  | 拍照（需要在相机应用里） |
+| 64  | 打开浏览器 |
+| 82  | 菜单键 |
+| 85  | 播放/暂停 |
+| 86  | 停止播放 |
+| 87  | 播放下一首 |
+| 88  | 播放上一首 |
+| 122  | 移动光标到行首或列表顶部 |
+| 123  | 移动光标到行末或列表底部 |
+| 126  | 恢复播放 |
+| 127  | 暂停播放 |
+| 164  | 静音 |
+| 176  | 打开系统设置 |
+| 187  | 切换应用 |
+| 207  | 打开联系人 |
+| 208  | 打开日历 |
+| 209  | 打开音乐 |
+| 210  | 打开计算器 |
+| 220  | 降低屏幕亮度 |
+| 221  | 提高屏幕亮度 |
+| 223  | 系统休眠 |
+| 224  | 点亮屏幕 |
+| 231  | 打开语音助手 |
+| 276  | 如果没有 wakelock 则让系统休眠 |
+
+### 16、滑动解锁 ###
+
+	adb shell input swipe 300 1000 300 500
+	参数 300 1000 300 500 分别表示起始点x坐标 起始点y坐标 结束点x坐标 结束点y坐标。
+
+### 17、输入文本 ###
+
+	adb shell input text hello
+
+### 18、清空日志 ###
+
+	adb logcat -c
+
+### 19、内核日志 ###
+
+	adb shell dmesg
+
+### 20、型号 ###
+
+
+	adb shell getprop ro.product.model
+
+### 21、电池状况 ###
+
+	adb shell dumpsys battery
+
+### 22、屏幕分辨率 ###
+
+	adb shell wm size
+
+### 23、屏幕密度 ###
+
+	adb shell wm density
+
+### 24、显示屏参数 ###
+
+	adb shell dumpsys window displays
+
+### 25、android_id ###
+
+	adb shell settings get secure android_id
+
+### 26、IMEI ###
+
+	adb shell dumpsys iphonesubinfo
+
+### 27、Android 系统版本 ###
+
+	adb shell getprop ro.build.version.release
+
+### 28、IP 地址 ###
+
+	adb shell ifconfig | grep Mask
+	或
+	adb shell netcfg
+
+### 29、Mac 地址 ###
+
+	adb shell cat /sys/class/net/wlan0/address
+
+### 30、CPU 信息 ###
+
+	adb shell cat /proc/cpuinfo
+
+### 31、内存信息 ###
+
+	adb shell cat /proc/meminfo
+
+### 32、更多硬件与系统属性 ###
+
+	adb shell cat /system/build.prop
+
+### 32、修改设置-分辨率 ###
+
+
+	adb shell wm size 480x1024
+	恢复原分辨率
+	adb shell wm size reset
+
+### 32、修改设置-屏幕密度 ###
+
+
+	adb shell wm density 160
+	恢复原屏幕密度
+	adb shell wm density reset
+
+### 33、显示区域 ###
+
+	adb shell wm overscan 0,0,0,200
+	恢复原显示区域
+	adb shell wm overscan reset
+
+### 34、关闭USB调试模式 ###
+
+	adb shell settings put global adb_enabled 0
+
+### 35、状态栏和导航栏的显示隐藏 ###
+
+	adb shell settings put global policy_control <key-values>
+
+
+|  key   | 含义  | 
+|  ----  | ----  |
+| immersive.full  | 同时隐藏 |
+| immersive.status  | 隐藏状态栏 |
+| immersive.navigation  | 隐藏导航栏 |
+| immersive.preconfirms  | ？ |
+
+
+|  value   | 含义  | 
+|  ----  | ----  |
+| apps	  | 所有应用 |
+| *  | 所有界面 |
+| packagename  | 指定应用 |
+| -packagename  | 排除指定应用 |
+
+### 36、恢复正常模式 ###
+
+	adb shell settings put global policy_control null
+
+### 37、截图保存到电脑 ###
+
+	adb exec-out screencap -p > sc.png
+
+### 38、录制屏幕 ###
+
+	adb shell screenrecord /sdcard/filename.mp4
+
+### 39、查看当前分区挂载情况 ###
+
+	mount
+
+### 40、重新挂载 ###
+
+	mount -o remount,rw -t yaffs2 /dev/block/platform/msm_sdcc.1/by-name/system /system
+
+### 41、查看连接过的 WiFi 密码 ###
+
+	cat /data/misc/wifi/*.conf
+
+### 42、设置系统日期和时间 ###
+
+	date -s 20160823.131500
+
+### 43、重启手机 ###
+
+	adb reboot
+
+### 44、检测设备是否已 root ###
+
+	adb shellt
+
+### 45、开启/关闭 WiFi ###
+
+	adb shell svc wifi enable/disable
+
+### 46、使用 Monkey 进行压力测试 ###
+
+	adb shell monkey -p <packagename> -v 500
+
+### 47、重启到 Recovery 模式 ###
+
+	adb reboot recovery
+
+### 48、重启到 Fastboot 模式 ###
+
+	adb reboot bootloader
+
+### 49、通过 sideload 更新系统 ###
+
+	adb sideload <path-to-update.zip>
+
+### 50、查看进程 ###
+
+	adb shell ps
+
+### 51、查看实时资源占用情况 ###
+
+	adb shell top
+
+
+|  列名   | 含义  | 
+|  ----  | ----  |
+| PID	  | 进程ID |
+| PR  | 优先级 |
+| CPU%  | 当前瞬间占用 CPU 百分比 |
+| S  | 进程状态（R=运行，S=睡眠，T=跟踪/停止，Z=僵尸进程） |
+| #THR  | 线程数 |
+| VSS  | Virtual Set Size 虚拟耗用内存（包含共享库占用的内存） |
+| RSS  | Resident Set Size 实际使用物理内存（包含共享库占用的内存） |
+| PCY  | 调度策略优先级，SP_BACKGROUND/SPFOREGROUND |
+| UID  | 进程所有者的用户 ID |
+| NAME  | 进程名 |
+
+### 52、查看进程 UID ###
+
+	adb shell dumpsys package <packagename> | grep userId=
+
 参考网址：
 
 <https://blog.csdn.net/shengmer/article/details/79027828>
+
+<https://blog.csdn.net/zhonglunshun/article/details/78362439>
