--- a/_posts/2019/2019-08-22-adb.md
+++ b/_posts/2019/2019-08-22-adb.md
@@ -116,7 +116,7 @@ ctrl + d从终端退出
 | -i  | 显示应用的 installer |
 | -u  | 包含已卸载应用 |
 | -i  | 显示应用的 installer |
-| <FILTER>  | 包名包含 <FILTER> 字符串 |
+| \<FILTER\>  | 包名包含 \<FILTER\> 字符串 |
 
 ### 10、清除应用数据与缓存 ###
 
