添加几篇文章

--- a/_posts/2019/2019-08-14-Button.md
+++ b/_posts/2019/2019-08-14-Button.md
@@ -27,8 +27,61 @@ findViewById（）传入xml中定义的唯一的标识返回Button对象
 
 ## 3、按钮点击事件 ##
 
+实际开发中:使用匿名内部类或者第四种写法
+
+### [1]通过内部类来实现按钮点击事件 ###
+
+### [2]通过匿名内部类去实现 ###
+
 setOnClickListener()方法为按钮注册一个监听器，点击按钮会执行监听器中的OnClick()方法。
 
+        mBtn1.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                Intent intent = new Intent(FirstActivity.this, SecondActivity.class);
+                startActivity(intent);
+            }
+        });
+
+
+### [3]当页面上有多个按钮 让当前类实现OnClickListener.通过switch语句 通过id 来判断具体点击的是哪个按钮 ###
+
+    
+    @Override
+    public void onClick(View v) {
+        switch (v.getId()) {
+            case R.id.btn2:
+                Toast.makeText(this, "弹了个窗", Toast.LENGTH_SHORT).show();
+                break;
+            case R.id.btn3:
+                Intent intent = new Intent(this, ThirdActivity.class);
+                startActivity(intent);
+                break;
+        }
+    }
+
+### [4]按钮第四种点击事件写法  ###
+
+
+
+[4.1]在按钮上声明一个onClick属性
+
+
+    
+    <Button
+        android:onClick="Click"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="弹个窗" />
+
+[4.2]在mainActivity写一个方法 要求方法名和属性名一样 并且接收一个参数 参数类型View.
+
+    
+    public void Click(View view) {
+        Toast.makeText(this, "弹了个窗", Toast.LENGTH_SHORT).show();
+    }
+
+[4.3]原理就是我们前面讲的反射. 
 
 
 
