更新博客目录

--- a/pages/404.md
+++ b/pages/404.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 一个未知的世界
-subtitle: 也是你会找 &nbsp;&nbsp; <a href ="http://www.nangongyibin.com/arch.html">架构</a>&nbsp;&nbsp; <a href ="http://www.nangongyibin.com/life.html">生活故事</a>&nbsp;&nbsp;
+subtitle: 也是你会找 &nbsp;&nbsp; <a href ="http://www.nangongyibin.com/kotlin.html">Kotlin</a>&nbsp;&nbsp; <a href ="http://www.nangongyibin.com/flutter.html">Flutter</a>&nbsp;&nbsp;
 permalink: /404.html
 ---
 # 404
