--- a/_posts/2019/2019-08-22-aes.md
+++ b/_posts/2019/2019-08-22-aes.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: AES加密算法
-category: encryption
-tags: [encryption]
+category: Encryption
+tags: [Encryption]
 excerpt: AES加密算法
 ---
 
