更新博客分类

--- a/_posts/2019/2019-08-09-time.md
+++ b/_posts/2019/2019-08-09-time.md
@@ -3,7 +3,7 @@ layout: post
 title: Linux上查看系统/服务器运行时间的 方法
 category: Linux
 tags: [Linux]
-excerpt: Yum的简单使用
+excerpt: Linux上查看系统/服务器运行时间的 方法
 ---
 
 ### 1、 方法① ###
