--- a/_posts/2019/2019-08-30-jdbc.md
+++ b/_posts/2019/2019-08-30-jdbc.md
@@ -6,7 +6,7 @@ tags: [MySql]
 excerpt: Jdbc
 ---
 
-## jdbc:java数据库连接。##
+## jdbc:java数据库连接。 ##
 
 ## jdbc可以适配市面上大多数数据库，我们使用java语言开发只要写一套程序就ok。 ##
 
@@ -42,3 +42,12 @@ excerpt: Jdbc
             e.printStackTrace();
         }
     }
+
+
+driverManager:注册驱动 获取一个数据库连接 
+
+Connection :获取一个statement对象,获取一个preparedStatement(预编译对象 可以防止sql注入) 
+
+ResultSet:代表结果集 只有进行查询的sdl语句的时候才会返回该对象,结果集内部默认有一个光标 光标默认在数据第一行之前.我们需要获取数据需要移动光标 移动光标的方法next() first() last();
+
+statement对象 :执行一个查询的sql语句使用executeQuery(String sql) 如果执行的是insert update delete 应该使用executeUpdate(); 
