--- a/_posts/2019/2019-08-12-mysql-cz.md
+++ b/_posts/2019/2019-08-12-mysql-cz.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Mysql基本操作
+title: mysql基本操作
 category: Linux
 tags: [Linux]
-excerpt: Mysql基本操作
+excerpt: mysql基本操作
 ---
 ### 1、查看全局变量   ###
 
