--- a/_posts/2019/2019-09-02-sqlite.md
+++ b/_posts/2019/2019-09-02-sqlite.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: sqlite数据库
-category: Linux
-tags: [Linux]
+category: DataBase
+tags: [DataBase]
 excerpt: sqlite数据库
 ---
 
