--- a/_posts/2019/2019-09-09-0x80040200.md
+++ b/_posts/2019/2019-09-09-0x80040200.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 0x80040200 
+title: ox80040200
 category: C
 tags: [C]
-excerpt: 0x80040200 
+excerpt: ox80040200
 ---
 
 ActiveX
