--- a/_posts/2019/2019-09-15-ctsms.md
+++ b/_posts/2019/2019-09-15-ctsms.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 短信大全案例 
+title: 短信发送器
 category: Activity
 tags: [Activity]
-excerpt: 短信大全案例 
+excerpt: 短信发送器 
 ---
  
 共同点:都是有2个页面，都是从Ａ页面跳转到Ｂ页面，并且把Ａ页面的数据传递到Ｂ页面
