提交今天遇到的问题的解决办法

--- a/_posts/2019/2019-10-04-tween.md
+++ b/_posts/2019/2019-10-04-tween.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Android中的动画----补间动画
-category: Service
-tags: [Service]
+category: Other
+tags: [Other]
 excerpt: Android中的动画----补间动画
 ---
 
