--- a/_posts/Android/Other/2019-10-26-232.md
+++ b/_posts/Android/Other/2019-10-26-232.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:   ubuntu16.04 Android源码下载编译  
+title:   ubuntu18.04 Android源码下载编译  
 category: Other
 tags: [Other]
-excerpt:  ubuntu16.04 Android源码下载编译
+excerpt:  ubuntu18.04 Android源码下载编译
 ---
 
 ## 一、源码下载 ##
@@ -11,16 +11,20 @@ excerpt:  ubuntu16.04 Android源码下载编译
 ### 安装Git ###
 
 	sudo apt-get install git 
-	git config –global user.email “×××@××.com” 
-	git config –global user.name “×××”
+	git config –-global user.email “×××@××.com” 
+	git config –-global user.name “×××”
 
 ### 下载repo工具 ###
 
-	mkdir ~/bin PATH=~/bin
-	$PATH curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo 
+	mkdir ~/bin 
+	PATH=~/bin$PATH 
+	curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo 
 	## 如果上述 URL 不可访问，可以用下面的：
 	curl https://storage-googleapis.lug.ustc.edu.cn/git-repo-downloads/repo > ~/bin/repo 
-	chmod a+x~/bin/repo
+	chmod a+x ~/bin/repo
+
+	然后添加repo到PATH环境变量
+	export PATH=~/bin:$PATH
 
 ### 建立一个工作目录 ###
 
@@ -29,9 +33,12 @@ excerpt:  ubuntu16.04 Android源码下载编译
 
 ### 初始化仓库命令 ###
 
-	repo init -u git://mirrors.ustc.edu.cn/aosp/platform/manifest 
+	repo init -u https://aosp.tuna.tsinghua.edu.cn/platform/manifest -b android-8.1.0_r41
+ 
 	## 如果提示无法连接到 gerrit.googlesource.com，可以编辑 ~/bin/repo，把 REPO_URL 一行替换成下面的：
 	REPO_URL = 'https://gerrit-googlesource.proxy.ustclug.org/git-repo'
+	或
+	REPO_URL = 'https://mirrors.tuna.tsinghua.edu.cn/git/git-repo'
 
 ### 同步源码树（以后只需执行这条命令来同步） ###
 
@@ -69,3 +76,5 @@ excerpt:  ubuntu16.04 Android源码下载编译
 <https://source.android.google.cn/setup/build/requirements>
 
 <https://blog.csdn.net/lq576165360/article/details/85274133>
+
+<https://blog.csdn.net/Yoryky/article/details/81813717>
