--- a/_posts/Web/Html/2019-11-25-239.md
+++ b/_posts/Web/Html/2019-11-25-239.md
@@ -562,7 +562,7 @@ UTF-8则包含全世界所有国家需要用到的字符
 
 ## 课堂一练 ##
 
-关于标签下列说法正确的是 
+1关于标签下列说法正确的是 
 
 (A) P1是段落标签
 
@@ -773,11 +773,11 @@ D < a src=" #show">跳转</a>
 (B)  < a href="#show">跳转</a> 
 
 (C)  < a href="success#show">跳转</a>
+
 (D) < a src="success.html#show">跳转</a>
 
 ##  特殊字符标签 （理解） ##
 
- <img src="media/zifu.png" />
 
 ![](http://www.nangongyibin.com/assets/images/zifu.png)
 
@@ -915,7 +915,7 @@ D < a src=" #show">跳转</a>
 
 列表最大的特点就是  整齐 、整洁、 有序
 
-## 无序列表 ul （重点）##
+## 无序列表 ul （重点） ##
 
 无序列表的各个列表项之间没有顺序级别之分，是并列的。其基本语法格式如下：
 
@@ -941,7 +941,7 @@ D < a src=" #show">跳转</a>
  3. 无序列表会带有自己样式属性，放下那个样式，一会让CSS来！
 ```
 
-## 有序列表 ol （了解）##
+## 有序列表 ol （了解） ##
 
 
 ![](http://www.nangongyibin.com/assets/images/gold.png)
@@ -963,7 +963,7 @@ D < a src=" #show">跳转</a>
 
 
 
-## 自定义列表（理解）##
+## 自定义列表（理解） ##
 
 定义列表常用于对术语或名词进行解释和描述，定义列表的列表项前没有任何项目符号。其基本语法如下：
 
