更新一些博客的格式

--- a/_posts/Android/Activity/2019-10-09-189.md
+++ b/_posts/Android/Activity/2019-10-09-189.md
@@ -11,5 +11,7 @@ excerpt:  Android强制Activity竖屏的方法
 
 	android:screenOrientation="portrait"
 
-其他方法可参考：<https://blog.csdn.net/q316510202/article/details/51790818>
+**[参考文献]**
+
+1. <https://blog.csdn.net/q316510202/article/details/51790818>
 
