--- a/_posts/Android/DataBase/2019-09-07-122.md
+++ b/_posts/Android/DataBase/2019-09-07-122.md
@@ -23,6 +23,7 @@ excerpt: 如何打开.db数据库文件
 
 ![](http://www.nangongyibin.com/assets/images/dbopen4.png)
 
-参考网址：
 
-<https://jingyan.baidu.com/article/ff42efa9c53614c19e220205.html>
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/ff42efa9c53614c19e220205.html>
