--- a/_posts/Android/DataBase/2019-10-08-182.md
+++ b/_posts/Android/DataBase/2019-10-08-182.md
@@ -891,10 +891,11 @@ MigrationHelper 代码：
 	        DaoMaster daoMaster = new DaoMaster(db);
 	        daoSession = daoMaster.newSession();
 
+**[参考文献]**
+
+1. <https://blog.csdn.net/qq_32175491/article/details/82913904>
 
 
-
-参考网址：<https://blog.csdn.net/qq_32175491/article/details/82913904>
 
 
 
