--- a/_posts/Android/Exception/2019-09-02-100.md
+++ b/_posts/Android/Exception/2019-09-02-100.md
@@ -25,8 +25,8 @@ excerpt: 解决AndroidSDK下载和更新失败“Connection to https://dl-ssl.go
 	2.在『Android SDK Manager - Settings』窗口中，在「HTTP Proxy Server」和「HTTP Proxy Port」输入框内填入mirrors.neusoft.edu.cn和80，并且选中「Force https://... sources to be fetched using http://...」复选框。设置完成后单击「Close」按钮关闭『Android SDK Manager - Settings』窗口返回到主界面；
 	3.依次选择「Packages」、「Reload」。
 
-参考网址：
+**[参考文献]**
 
-<https://www.cnblogs.com/yc-755909659/p/4073415.html>
+1. <https://www.cnblogs.com/yc-755909659/p/4073415.html>
 
 
