--- a/_posts/Android/Exception/2019-09-07-121.md
+++ b/_posts/Android/Exception/2019-09-07-121.md
@@ -26,6 +26,6 @@ excerpt: java.io.IOException  Cleartext HTTP traffic to xxx.xxx.xxx.xxx not perm
 
 原因：Android 9.0是默认禁止所有http请求的，需要在代码中设置如以下代码才可以正常进行网络请求
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/Doyle_/article/details/88964548>
+1. <https://blog.csdn.net/Doyle_/article/details/88964548>
