--- a/_posts/Android/Exception/2019-09-22-152.md
+++ b/_posts/Android/Exception/2019-09-22-152.md
@@ -14,7 +14,6 @@ excerpt: java.lang.NoClassDefFoundError；failed resolution of ；Lorg/apache/ht
 
 
 
+**[参考文献]**
 
-参考网址：
-
-<https://blog.csdn.net/u012013969/article/details/92848279>
+1. <https://blog.csdn.net/u012013969/article/details/92848279>
