--- a/_posts/Android/Exception/2019-10-06-178.md
+++ b/_posts/Android/Exception/2019-10-06-178.md
@@ -17,7 +17,9 @@ excerpt: Android序列化(Serializable)出现错误java.lang.RuntimeException；
 	让所有的实体类都实现SerialZable接口就可以了。
 
 
-参考网址：<https://blog.csdn.net/Afanbaby/article/details/78615207>
+**[参考文献]**
+
+1. <https://blog.csdn.net/Afanbaby/article/details/78615207>
 
 
 
