--- a/_posts/Android/Exception/2019-10-15-210.md
+++ b/_posts/Android/Exception/2019-10-15-210.md
@@ -12,6 +12,6 @@ excerpt:  Error inflating class android.widget.ImageView
 
 	Android5.0以下版本不支持ImageView的背景是Vector Asset文件【xml写的控件——drawable右键创建的Vector Asset】
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/yingtian648/article/details/76829960>
+1. <https://blog.csdn.net/yingtian648/article/details/76829960>
