--- a/_posts/Android/Exception/2019-10-27-248.md
+++ b/_posts/Android/Exception/2019-10-27-248.md
@@ -11,10 +11,10 @@ excerpt:  AndroidStudio SSL peer shut down incorrectly 问题
 	在根build.gradle中添加镜像仓库，一般我们选择阿里的 http://maven.aliyun.com/nexus/content/groups/public/
 
 
-参考网址：
+**[参考文献]**
 
+1. <https://www.jianshu.com/p/194b57cf7162>
 
-<https://www.jianshu.com/p/194b57cf7162>
 
 
 
