--- a/_posts/Android/Layout/2019-10-06-176.md
+++ b/_posts/Android/Layout/2019-10-06-176.md
@@ -11,8 +11,12 @@ excerpt: EditText获取焦点
     mEditText.requestFocus();
     mEditText.findFocus();	
 
-	
-参考网址：<https://www.cnblogs.com/niupi/p/6251663.html>
+
+**[参考文献]**
+
+1. <https://www.cnblogs.com/niupi/p/6251663.html>
+
+
 
 
 
