--- a/_posts/Android/Other/2019-08-27-47.md
+++ b/_posts/Android/Other/2019-08-27-47.md
@@ -32,4 +32,7 @@ excerpt: AndroidStudio常见设置
 
 ![](http://www.nangongyibin.com/assets/images/as5.png)
 
-参考网站：<https://blog.csdn.net/Fredydeng/article/details/87941151>
+
+**[参考文献]**
+
+1. <https://blog.csdn.net/Fredydeng/article/details/87941151>
