--- a/_posts/Android/Other/2019-10-08-179.md
+++ b/_posts/Android/Other/2019-10-08-179.md
@@ -35,4 +35,6 @@ excerpt:  EventBus（一）
 
 	EventBus.getDefault().unregister(this);
 
-参考网址：<https://blog.csdn.net/zzb_bin/article/details/80229456>
+**[参考文献]**
+
+1. <https://blog.csdn.net/zzb_bin/article/details/80229456>
