--- a/_posts/Android/Other/2019-10-26-232.md
+++ b/_posts/Android/Other/2019-10-26-232.md
@@ -69,12 +69,9 @@ excerpt:  ubuntu18.04 Android源码下载编译
 
 
 
-参考网址：
+**[参考文献]**
 
-<https://www.jianshu.com/p/257d80669752>
-
-<https://source.android.google.cn/setup/build/requirements>
-
-<https://blog.csdn.net/lq576165360/article/details/85274133>
-
-<https://blog.csdn.net/Yoryky/article/details/81813717>
+1. <https://www.jianshu.com/p/257d80669752>
+2. <https://source.android.google.cn/setup/build/requirements>
+3. <https://blog.csdn.net/lq576165360/article/details/85274133>
+4. <https://blog.csdn.net/Yoryky/article/details/81813717>
