--- a/_posts/Android/Service/2019-10-03-171.md
+++ b/_posts/Android/Service/2019-10-03-171.md
@@ -35,7 +35,10 @@ Aidl专门用来解决进程间通信(IPC)
 
 支付宝暴漏支付接口，斗地主买豆。
 
-具体使用可参考：<https://www.cnblogs.com/huangjialin/p/7738104.html>
+
+**[参考文献]**
+
+1.<https://www.cnblogs.com/huangjialin/p/7738104.html>
 
 
 
