--- a/_posts/C/C/2019-10-26-243.md
+++ b/_posts/C/C/2019-10-26-243.md
@@ -10,8 +10,8 @@ excerpt:  Visual Studio 2017安装时共享组件、工具和 SDK安装位置不
 
 	删除注册表HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\VisualStudio\Setup下的SharedInstallationPath项。
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/caoxuqiang/article/details/82821692>
+1. <https://blog.csdn.net/caoxuqiang/article/details/82821692>
 
 
