--- a/_posts/Android/Exception/2019-09-01-84.md
+++ b/_posts/Android/Exception/2019-09-01-84.md
@@ -20,9 +20,8 @@ excerpt: AndroidStudio报错No cached version available for offline mode
 		
 ![](http://www.nangongyibin.com/assets/images/aeo1.png)
 
+**[参考文献]**
 
-参考网址：
-
-<https://blog.csdn.net/gerryrun/article/details/80335665>
+1. <https://blog.csdn.net/gerryrun/article/details/80335665>
 
 
