--- a/_posts/Android/Exception/2019-09-02-97.md
+++ b/_posts/Android/Exception/2019-09-02-97.md
@@ -11,9 +11,8 @@ excerpt: ADT-Unable to resolve target android-21
 ![](http://www.nangongyibin.com/assets/images/adt1.png)
 
 
+**[参考文献]**
 
-参考网址：
-
-<https://blog.csdn.net/su749520/article/details/80772308>
+1. <https://blog.csdn.net/su749520/article/details/80772308>
 
 
