--- a/_posts/Android/Exception/2019-09-02-98.md
+++ b/_posts/Android/Exception/2019-09-02-98.md
@@ -17,8 +17,8 @@ excerpt: ADT-Project'XX'is missing required library' 路径错误
 	3、在下面所列出的jar包中选中相互重复、冲突或者地址错误的jar包（一般有问题的jar包都显示黄色警告），然后点击Remove；
 	4、点击确定关闭窗口，在ADT自动重新build All后问题就解决了。
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/qq457163027/article/details/51354300>
+1. <https://blog.csdn.net/qq457163027/article/details/51354300>
 
 
