--- a/_posts/Android/Layout/2019-10-06-177.md
+++ b/_posts/Android/Layout/2019-10-06-177.md
@@ -19,8 +19,9 @@ excerpt: EditText软键盘输入法回车键改成下一步Next
 
 需要注意设置的值写法是@+id/edit3而不是@id/edit3，少了加号的话无法编译成功。
 
-	
-参考网址：<https://blog.csdn.net/mqdxiaoxiao/article/details/88857532>
+**[参考文献]**
+
+1. <https://blog.csdn.net/mqdxiaoxiao/article/details/88857532>
 
 
 
