--- a/_posts/Android/Other/2019-08-22-41.md
+++ b/_posts/Android/Other/2019-08-22-41.md
@@ -375,8 +375,7 @@ ctrl + d从终端退出
 
 	adb shell dumpsys package <packagename> | grep userId=
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/shengmer/article/details/79027828>
-
-<https://blog.csdn.net/zhonglunshun/article/details/78362439>
+1. <https://blog.csdn.net/shengmer/article/details/79027828>
+2. <https://blog.csdn.net/zhonglunshun/article/details/78362439>
