--- a/_posts/Android/Other/2019-09-22-149.md
+++ b/_posts/Android/Other/2019-09-22-149.md
@@ -14,6 +14,6 @@ excerpt: 获取Android手机信息
 
     android.os.Build.VERSION.RELEASE
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/qq_34329508/article/details/52730737>
+1. <https://blog.csdn.net/qq_34329508/article/details/52730737>
