--- a/_posts/Android/Other/2019-10-25-223.md
+++ b/_posts/Android/Other/2019-10-25-223.md
@@ -67,11 +67,9 @@ excerpt:  创建自己的 Android 依赖库
             compile 'com.github.look0089:MyDialog:v1.7'
     }
 
+**[参考文献]**
 
-
-参考网址：
-
-<https://www.jianshu.com/p/534ee1c6d500>
+1. <https://www.jianshu.com/p/534ee1c6d500>
 
 
 
