更新参考文献

--- a/_posts/C/C/2019-09-09-137.md
+++ b/_posts/C/C/2019-09-09-137.md
@@ -28,6 +28,7 @@ excerpt: 在vs2010运行c程序时，控制台一闪而过怎么解决
 
 ![](http://www.nangongyibin.com/assets/images/vg3.png)
 
-参考网址：
 
-<https://blog.csdn.net/scorpio_tester/article/details/41889531>
+**[参考文献]**
+
+1. <https://blog.csdn.net/scorpio_tester/article/details/41889531>
