--- a/_posts/Java/Git/2019-09-22-150.md
+++ b/_posts/Java/Git/2019-09-22-150.md
@@ -29,6 +29,6 @@ excerpt: Git远程版本回退
 
 此时边将远程git仓库回退到之前的版本了
 
-参考网址：
+**[参考文献]**
 
-<https://www.cnblogs.com/zjdxr-up/p/10941898.html>
+1. <https://www.cnblogs.com/zjdxr-up/p/10941898.html>
