--- a/_posts/Java/Java/2019-09-22-153.md
+++ b/_posts/Java/Java/2019-09-22-153.md
@@ -14,6 +14,6 @@ excerpt: springboot请求方式
 
     @RequestMapping(value = "/PostRequest", method = {RequestMethod.POST})
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/xingkaichun/article/details/92579001>
+1. <https://blog.csdn.net/xingkaichun/article/details/92579001>
