--- a/_posts/Java/Java/2019-10-06-174.md
+++ b/_posts/Java/Java/2019-10-06-174.md
@@ -16,8 +16,9 @@ excerpt: 对象的集合ArrayList去重
         });
         set.addAll(csd);
 
+**[参考文献]**
 
-参考网址：<https://blog.csdn.net/I_am_a_buger/article/details/81026018>
+1. <https://blog.csdn.net/I_am_a_buger/article/details/81026018>
 
 
 
