--- a/_posts/Java/Java/2019-10-06-175.md
+++ b/_posts/Java/Java/2019-10-06-175.md
@@ -12,8 +12,9 @@ excerpt: BigDecimal比较大小问题
 	if（a.compareTo（b）== 0）结果是true
 
 
+**[参考文献]**
 
-参考网址：<https://blog.csdn.net/hu15903314850/article/details/80407608>
+1. <https://blog.csdn.net/hu15903314850/article/details/80407608>
 
 
 
