--- a/_posts/Java/Java/2019-10-08-183.md
+++ b/_posts/Java/Java/2019-10-08-183.md
@@ -12,4 +12,6 @@ excerpt:  List集合取出最大值和最小值
 ![](http://www.nangongyibin.com/assets/images/list1.png)
 
 
-参考网址：<https://blog.csdn.net/qq79907141/article/details/79979520>
+**[参考文献]**
+
+1. <https://blog.csdn.net/qq79907141/article/details/79979520>
