--- a/_posts/Java/Java/2019-10-25-224.md
+++ b/_posts/Java/Java/2019-10-25-224.md
@@ -18,9 +18,9 @@ excerpt:  怎样将eclipse项目打包成WAR包
 ### 5、在这我将其导出到桌面上，最后点击Finish完成即可： ###
 
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/ggrjake25/article/details/86537850>
+1. <https://blog.csdn.net/ggrjake25/article/details/86537850>
 
 
 
