--- a/_posts/Java/Java/2019-10-25-226.md
+++ b/_posts/Java/Java/2019-10-25-226.md
@@ -14,8 +14,8 @@ excerpt:  安装两个不同版本的Jdk，改了path路径，但还是显示之
 
 2、因为在安装JDK1.6时，自动将java.exe、javaw.exe、javaws.exe三个可执行文件复制到了C:\Windows\System32目录，由于这个目录在WINDOWS环境变量中的优先级高于JAVA_HOME设置的环境变量优先级。
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/lzh657083979/article/details/76039297>
+1. <https://blog.csdn.net/lzh657083979/article/details/76039297>
 
 
