--- a/_posts/Java/Java/2019-10-26-236.md
+++ b/_posts/Java/Java/2019-10-26-236.md
@@ -34,7 +34,7 @@ Eclipse的版本和Jdk的版本不一致导致。
 3.不一致，就更换jdk 或者更换eclipse，使位数一致，问题解决。
 
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/u012343297/article/details/79635130>
+1. <https://blog.csdn.net/u012343297/article/details/79635130>
 
