--- a/_posts/Java/Java/2019-10-27-252.md
+++ b/_posts/Java/Java/2019-10-27-252.md
@@ -24,9 +24,9 @@ excerpt:  安装JDK ，提示 错误1316 指定的账户已存在
         WIN+R, 输入regedit，回车打开注册表，然后删除注册表HKEY_LOCAL_MACHINE下SOFTWARE下javasoft中相关文件(你之前删除操作的文件目录中关联文件)，这样做就可以了。
 
 
-参考网址:
+**[参考文献]**
 
-<https://blog.csdn.net/qq_39115469/article/details/95305304>
+1. <https://blog.csdn.net/qq_39115469/article/details/95305304>
 
 
 
