--- a/_posts/Java/Java/2019-10-27-254.md
+++ b/_posts/Java/Java/2019-10-27-254.md
@@ -14,12 +14,9 @@ JAVA_OPTS="-server -Xms800m -Xmx800m -XXNewSize=256M -XX:PermSize=256M -XX:MaxNe
 
 这种方法在只使用tomcat时管用，但使用eclipse时不管用.
 
+**[参考文献]**
 
-
-参考网址：
-
-
-<https://blog.csdn.net/HuHao_CSDN/article/details/82462839>
+1. <https://blog.csdn.net/HuHao_CSDN/article/details/82462839>
 
 
 
