--- a/_posts/Linux/2019-08-09-9.md
+++ b/_posts/Linux/2019-08-09-9.md
@@ -28,6 +28,6 @@ excerpt: nginx安装错误
 	
 	./configure --prefix=/usr/local/nginx --conf-path=/usr/local/nginx/nginx.conf
 
-参考网站：
+**[参考文献]**
 
-<https://www.jianshu.com/p/9227f0d3d005>
+1. <https://www.jianshu.com/p/9227f0d3d005>
