--- a/_posts/Linux/2019-08-15-25.md
+++ b/_posts/Linux/2019-08-15-25.md
@@ -35,7 +35,6 @@ excerpt: Centos7网络设置
 		# 测试
 		ping www.baidu.com
 
+**[参考文献]**
 
-参考网站：
-
-<https://blog.csdn.net/u014711094/article/details/79832259>
+1. <https://blog.csdn.net/u014711094/article/details/79832259>
