--- a/_posts/Linux/2019-08-30-76.md
+++ b/_posts/Linux/2019-08-30-76.md
@@ -95,6 +95,6 @@ excerpt: mysql的主从复制配置
 
 ![](http://www.nangongyibin.com/assets/images/mmss13.png)
 
-参考网站：
+**[参考文献]**
 
-<https://blog.51cto.com/superpcm/2094958>
+1. <https://blog.51cto.com/superpcm/2094958>
