--- a/_posts/Linux/2019-08-31-81.md
+++ b/_posts/Linux/2019-08-31-81.md
@@ -48,6 +48,6 @@ excerpt: Mongodb导出与导入远程Linux服务器上的数据
 	mongoimport -u admin -p 123456 --authenticationDatabase admin -h 10.6.22.12:27017 -d test -c people_test --file /e/temp/people.json --upsert rm /e/temp/people.json
 
 
-参考网站：
+**[参考文献]**
 
-<https://www.cnblogs.com/theRhyme/p/10900437.html>
+1. <https://www.cnblogs.com/theRhyme/p/10900437.html>
