--- a/_posts/Linux/2019-08-31-82.md
+++ b/_posts/Linux/2019-08-31-82.md
@@ -83,6 +83,6 @@ excerpt: Redis几种数据导出导入方式
 	echo "migrate key $key"
 	done
 
-参考网站：
+**[参考文献]**
 
-<https://www.jianshu.com/p/8b47d5d16851>
+1. <https://www.jianshu.com/p/8b47d5d16851>
