--- a/_posts/Linux/2019-08-31-83.md
+++ b/_posts/Linux/2019-08-31-83.md
@@ -12,6 +12,6 @@ tar -zcvf 打包后生成的文件名全路径 要打包的目录
 
 例子：把/xahot文件夹打包后生成一个/home/xahot.tar.gz的文件。
 
-参考网址：
+**[参考文献]**
 
-<https://www.cnblogs.com/Alan-Jones/p/7488179.html>
+1. <https://www.cnblogs.com/Alan-Jones/p/7488179.html>
