--- a/_posts/Linux/2019-09-01-85.md
+++ b/_posts/Linux/2019-09-01-85.md
@@ -12,8 +12,8 @@ excerpt: 卸载指定版本 bundle
     gem uninstall bundler -v=1.6.2
 
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/amcsc/article/details/84596677>
+1. <https://blog.csdn.net/amcsc/article/details/84596677>
 
 
