--- a/_posts/Linux/2019-09-01-87.md
+++ b/_posts/Linux/2019-09-01-87.md
@@ -55,7 +55,8 @@ excerpt: Linux 编译 apr-util 时报错
 
 	[root@mingc apr-util-1.6.0]# yum -y install expat-devel
 
-参考网址：
 
-<https://www.cnblogs.com/mingc/p/7695610.html>
+**[参考文献]**
+
+1. <https://www.cnblogs.com/mingc/p/7695610.html>
 
