--- a/_posts/Linux/2019-09-01-89.md
+++ b/_posts/Linux/2019-09-01-89.md
@@ -42,8 +42,10 @@ excerpt: Linux中运行.sql文件的方法
 	mysql> quit;\\退出即可
 	Bye
 
-参考网址：
 
-<http://blog.sina.com.cn/s/blog_7cecec950102yldn.html>
+
+**[参考文献]**
+
+1. <http://blog.sina.com.cn/s/blog_7cecec950102yldn.html>
 
 
