--- a/_posts/Linux/2019-09-01-90.md
+++ b/_posts/Linux/2019-09-01-90.md
@@ -15,9 +15,10 @@ excerpt: Notepad++对比两个文件不同的方法
 
 ## 4、打开两个要对比的文件，然后在插件中选择compare--compare，Notepad++会将两个文件中不同的标记出来 ##
 
-参考网址：
 
-<https://jingyan.baidu.com/article/148a1921f73bfc4d70c3b17f.html>
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/148a1921f73bfc4d70c3b17f.html>
 
 
 
