--- a/_posts/Linux/2019-09-01-92.md
+++ b/_posts/Linux/2019-09-01-92.md
@@ -25,10 +25,8 @@ excerpt: 连接redis错误：ERR Client sent AUTH, but no password is set
 	redis 127.0.0.1:6379> AUTH 123456
 	Ok
 
+**[参考文献]**
 
-
-参考网址：
-
-<https://www.cnblogs.com/robinli/p/9265186.html>
+1. <https://www.cnblogs.com/robinli/p/9265186.html>
 
 
