--- a/_posts/Linux/2019-09-01-93.md
+++ b/_posts/Linux/2019-09-01-93.md
@@ -24,9 +24,8 @@ excerpt: Redis命令
 	redis 127.0.0.1:6379> SET w3ckey redis
 	OK
 
+**[参考文献]**
 
-参考网址：
-
-<https://www.redis.net.cn/order/3528.html>
+1. <https://www.redis.net.cn/order/3528.html>
 
 
