--- a/_posts/Linux/2019-09-01-95.md
+++ b/_posts/Linux/2019-09-01-95.md
@@ -17,8 +17,8 @@ excerpt: Vim跳转
 
 	先按两次“g”
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/dannyiscoder/article/details/79025840>
+1. <https://blog.csdn.net/dannyiscoder/article/details/79025840>
 
 
