--- a/_posts/Linux/2019-09-01-96.md
+++ b/_posts/Linux/2019-09-01-96.md
@@ -17,8 +17,9 @@ excerpt: Vim查找方式
 
 	?pattern 向上搜索 #继续搜索上一个
 
-参考网址：
 
-<http://www.21ic.com/tougao/article/3956.html>
+**[参考文献]**
+
+1. <http://www.21ic.com/tougao/article/3956.html>
 
 
