--- a/_posts/Linux/2019-09-02-106.md
+++ b/_posts/Linux/2019-09-02-106.md
@@ -28,8 +28,8 @@ excerpt: 关于VMware虚拟机网络ping不通外网问题
 
 ![](http://www.nangongyibin.com/assets/images/vnpe5.png)
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/tap_into/article/details/79676680>
+1. <https://blog.csdn.net/tap_into/article/details/79676680>
 
 
