--- a/_posts/Linux/2019-09-07-127.md
+++ b/_posts/Linux/2019-09-07-127.md
@@ -12,6 +12,7 @@ excerpt: Linux 软连接删除
 
 注意不是rm -rf   symbolic_name/ 
 
-参考链接：
 
-<https://www.cnblogs.com/sign-ptk/p/6207936.html>
+**[参考文献]**
+
+1. <https://www.cnblogs.com/sign-ptk/p/6207936.html>
