--- a/_posts/Linux/2019-10-08-187.md
+++ b/_posts/Linux/2019-10-08-187.md
@@ -41,4 +41,8 @@ value:自动变成  选择文件
 
 ![](http://www.nangongyibin.com/assets/images/postman4.png)
 
-参考地址：<https://jingyan.baidu.com/article/425e69e614f472be14fc166f.html>
+
+
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/425e69e614f472be14fc166f.html>
