--- a/_posts/Linux/2019-10-26-238.md
+++ b/_posts/Linux/2019-10-26-238.md
@@ -45,6 +45,6 @@ LxRunOffline下载地址：
 
 显示 F:\Ubuntu 即迁移成功
 
-参考网址：
+**[参考文献]**
 
-<https://my.oschina.net/u/3678587/blog/3020554>
+1. <https://my.oschina.net/u/3678587/blog/3020554>
