--- a/_posts/Linux/2019-10-26-240.md
+++ b/_posts/Linux/2019-10-26-240.md
@@ -23,7 +23,7 @@ excerpt:  安装MySQL最后一步出现错误Error Nr.1045解决方法
 
 	4.重新安装 这次不报错了
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/gsls200808/article/details/46846019>
+1. <https://blog.csdn.net/gsls200808/article/details/46846019>
 
