--- a/_posts/Linux/2019-10-26-244.md
+++ b/_posts/Linux/2019-10-26-244.md
@@ -94,12 +94,9 @@ excerpt:  启用Windows10的Linux子系统
 	sudo apt-get upgrade
 
 
-参考网址：
+**[参考文献]**
 
-<https://www.linuxidc.com/Linux/2019-05/158676.htm>
-
-<https://www.jianshu.com/p/dc32a75e2de4?utm_source=oschina-app>
-
-<https://blog.csdn.net/lu900618/article/details/74955065>
-
-<https://blog.csdn.net/weixin_41884010/article/details/97898108>
+1. <https://www.linuxidc.com/Linux/2019-05/158676.htm>
+2. <https://www.jianshu.com/p/dc32a75e2de4?utm_source=oschina-app>
+3. <https://blog.csdn.net/lu900618/article/details/74955065>
+4. <https://blog.csdn.net/weixin_41884010/article/details/97898108>
