--- a/_posts/Linux/2019-10-26-246.md
+++ b/_posts/Linux/2019-10-26-246.md
@@ -23,8 +23,8 @@ excerpt:  Xshell连接win10 Linux子系统
 
 ![](http://www.nangongyibin.com/assets/xwl1.png)
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/u011786352/article/details/89471848>
+1. <https://blog.csdn.net/u011786352/article/details/89471848>
 
 
