--- a/_posts/C/C/2019-10-26-235.md
+++ b/_posts/C/C/2019-10-26-235.md
@@ -25,6 +25,6 @@ excerpt:  安装DirectX SDK时出现Error Code；s1023 的解决方案
 
 ![](http://www.nangongyibin.com/assets/images/dec3.jpg)
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/ts1030746080/article/details/8681550>
+1. <https://blog.csdn.net/ts1030746080/article/details/8681550>
