--- a/_posts/Java/Git/2019-09-09-132.md
+++ b/_posts/Java/Git/2019-09-09-132.md
@@ -50,6 +50,7 @@ Remote: [31mIncorrect username or password ( access token )[0m Authentication fa
 
 ![](http://www.nangongyibin.com/assets/images/gat8.png)
 
-参考网址：
 
-<https://jingyan.baidu.com/article/870c6fc37ca5feb03fe4beab.html>
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/870c6fc37ca5feb03fe4beab.html>
