--- a/_posts/Java/Java/2019-09-01-94.md
+++ b/_posts/Java/Java/2019-09-01-94.md
@@ -66,8 +66,8 @@ excerpt: Initialization failed for 'https://start.spring.io' Please check URL
 ![](http://www.nangongyibin.com/assets/images/se7.png)
 
 
-参考网址：
+**[参考文献]**
 
-<https://www.cnblogs.com/xww115/p/11265030.html>
+1. <https://www.cnblogs.com/xww115/p/11265030.html>
 
 
