--- a/_posts/Java/Java/2019-10-25-227.md
+++ b/_posts/Java/Java/2019-10-25-227.md
@@ -26,9 +26,9 @@ excerpt:  Target runtime com.genuitec.runtime.generic
 
 ![](http://www.nangongyibin.com/assets/images/jee4.png)
 
-参考网址：
+**[参考文献]**
 
-<https://jingyan.baidu.com/article/d7130635338e3f13fdf47518.html>
+1. <https://jingyan.baidu.com/article/d7130635338e3f13fdf47518.html>
 
 
 
