--- a/_posts/Java/Java/2019-10-26-237.md
+++ b/_posts/Java/Java/2019-10-26-237.md
@@ -21,6 +21,6 @@ C:\ProgramData\Oracle\Java\javapath\javaw.exe
 	（2）Jdk的版本和eclipse的版本不一致（jdk是32bit，eclipse是64bit或者是相反的）
 
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/weixin_41753022/article/details/80478472>
+1. <https://blog.csdn.net/weixin_41753022/article/details/80478472>
