--- a/_posts/Java/Java/2019-10-27-255.md
+++ b/_posts/Java/Java/2019-10-27-255.md
@@ -22,9 +22,9 @@ excerpt:  springside出现Description Resource Path Location Type
 	
 	http://www.springframework.org/schema/beans/spring-beans.xsd
 
-参考网址:
+**[参考文献]**
 
-<https://www.cnblogs.com/kuangyuping/p/3663200.html>
+1. <https://www.cnblogs.com/kuangyuping/p/3663200.html>
 
 
 
