--- a/_posts/Java/MySql/2019-10-25-229.md
+++ b/_posts/Java/MySql/2019-10-25-229.md
@@ -22,8 +22,7 @@ excerpt:  如何对PowerDesigner16.5版本进行汉化
 ![](http://www.nangongyibin.com/assets/images/pc10.png)
 
 
-参考网址：
+**[参考文献]**
 
-<https://jingyan.baidu.com/article/925f8cb88eb7c2c0dde05699.html>
-
-汉化文件 链接: <https://pan.baidu.com/s/1pLA4siv> 密码: eaji
+1. <https://jingyan.baidu.com/article/925f8cb88eb7c2c0dde05699.html>
+2. 汉化文件 链接: <https://pan.baidu.com/s/1pLA4siv> 密码: eaji
