--- a/_posts/Linux/2019-08-09-10.md
+++ b/_posts/Linux/2019-08-09-10.md
@@ -29,6 +29,6 @@ excerpt: nodejs的安装
 	v10.6.0
 
 
-参考网站：
+**[参考文献]**
 
-<https://www.cnblogs.com/mao2080/p/9346018.html>
+1. <https://www.cnblogs.com/mao2080/p/9346018.html>
