--- a/_posts/Linux/2019-08-09-11.md
+++ b/_posts/Linux/2019-08-09-11.md
@@ -17,6 +17,6 @@ excerpt: npm指定安装路径
 ### 3、在使用npm安装程序时在后面加一个参数-g即可将安装的程序安装到我们指定的目录 ###
 
 
-参考网站：
+**[参考文献]**
 
-<https://blog.csdn.net/friendan/article/details/50830671/>
+1. <https://blog.csdn.net/friendan/article/details/50830671/>
