--- a/_posts/Linux/2019-08-09-8.md
+++ b/_posts/Linux/2019-08-09-8.md
@@ -20,9 +20,7 @@ excerpt: nginx启动错误
 
 解决方法：找到这个进程kill掉以后,再执行/etc/rc.d/init.d/nginx start就一切正常了
 
-参考网站：
 
-<https://www.cnblogs.com/taui/p/6197045.html>
 
 ### 问题二 ###
 
@@ -186,10 +184,6 @@ excerpt: nginx启动错误
 	service nginx configtest
 	service nginx reload
 
-参考网址：
-
-<https://blog.csdn.net/baidu_37895884/article/details/78218322>
-
 
 ### 问题四 ###
 
@@ -220,6 +214,8 @@ excerpt: nginx启动错误
 	在浏览器地址栏输入你的Linux虚拟机的静态ip，会跳转到nginx的欢迎页面。
 
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/zyhlearnjava/article/details/71908529>
+1. <https://blog.csdn.net/zyhlearnjava/article/details/71908529>
+2. <https://blog.csdn.net/baidu_37895884/article/details/78218322>
+3. <https://www.cnblogs.com/taui/p/6197045.html>
