--- a/_posts/Linux/2019-08-15-37.md
+++ b/_posts/Linux/2019-08-15-37.md
@@ -129,11 +129,7 @@ Linux直接Mysql数据库
 
 现在退出，在输入命令 “ mysql -uroot -p ” 在输入刚才设置的密码，就可以正常登录到MySQL服务器了
 
-参考网址：
 
-<https://blog.csdn.net/Hello_World_QWP/article/details/80346904>
-
-<https://blog.csdn.net/vv19910825/article/details/82979563>
 
 
 ### 问题七 ###
@@ -201,6 +197,8 @@ Linux直接Mysql数据库
 	建立一个软连接	
 	ln -s /var/lib/mysql/mysql.sock /tmp/mysql.sock
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/a1173537204/article/details/88069724>
+1. <https://blog.csdn.net/a1173537204/article/details/88069724>
+2. <https://blog.csdn.net/Hello_World_QWP/article/details/80346904>
+3. <https://blog.csdn.net/vv19910825/article/details/82979563>
