--- a/_posts/Linux/2019-09-01-86.md
+++ b/_posts/Linux/2019-09-01-86.md
@@ -24,8 +24,8 @@ excerpt: dropping-database-errno
 	rm -f *
 
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/u012349696/article/details/77936997>
+1. <https://blog.csdn.net/u012349696/article/details/77936997>
 
 
