--- a/_posts/Linux/2019-09-01-91.md
+++ b/_posts/Linux/2019-09-01-91.md
@@ -12,8 +12,9 @@ excerpt: 使用ps给文字加粗
     
 ![](http://www.nangongyibin.com/assets/images/psf1.png)
 
-参考网址：
 
-<https://jingyan.baidu.com/article/e6c8503c6e76a6e54f1a18f5.html>
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/e6c8503c6e76a6e54f1a18f5.html>
 
 
