--- a/_posts/Linux/2019-09-02-101.md
+++ b/_posts/Linux/2019-09-02-101.md
@@ -114,8 +114,9 @@ PCRE
 
 	[root@localhost bin]# chkconfig --add httpd
 
-参考网址：
 
-<https://blog.csdn.net/wangshuminjava/article/details/80483397>
+**[参考文献]**
+
+1. <https://blog.csdn.net/wangshuminjava/article/details/80483397>
 
 
