--- a/_posts/Linux/2019-09-02-102.md
+++ b/_posts/Linux/2019-09-02-102.md
@@ -52,8 +52,9 @@ excerpt: 桥接模式下，实现主机和虚拟机可以互相ping通
 
 此时我们互ping成功。
 
-参考网址：
 
-<https://www.cnblogs.com/single-dont/p/10956953.html>
+**[参考文献]**
+
+1. <https://www.cnblogs.com/single-dont/p/10956953.html>
 
 
