--- a/_posts/Linux/2019-09-02-104.md
+++ b/_posts/Linux/2019-09-02-104.md
@@ -33,8 +33,8 @@ excerpt: Slave failed to initialize relay log info structure from the repository
 	mysql>start slave;
 
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/lwei_998/article/details/41210945>
+1. <https://blog.csdn.net/lwei_998/article/details/41210945>
 
 
