--- a/_posts/Linux/2019-10-08-180.md
+++ b/_posts/Linux/2019-10-08-180.md
@@ -30,4 +30,6 @@ excerpt:  Excel2013如何快速找出不连续的编号
 
 ![](http://www.nangongyibin.com/assets/images/excel6.png)
 
-参考网址：<https://jingyan.baidu.com/article/0964eca23dd9cd8284f5365c.html>
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/0964eca23dd9cd8284f5365c.html>
