--- a/_posts/Linux/2019-10-08-188.md
+++ b/_posts/Linux/2019-10-08-188.md
@@ -28,4 +28,7 @@ excerpt:  Windows10搜索不到无线蓝牙耳机设备如何解决
 
 ![](http://www.nangongyibin.com/assets/images/win5.png)
 
-参考网址:<https://jingyan.baidu.com/article/e2284b2b9eb628e2e6118d25.html>
+
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/e2284b2b9eb628e2e6118d25.html>
