--- a/_posts/Linux/2019-10-25-225.md
+++ b/_posts/Linux/2019-10-25-225.md
@@ -42,6 +42,6 @@ linux 解压zip文件到当前目录 unzip filename.zip
 
 ![](http://www.nangongyibin.com/assets/images/is7.png)
 
-参考网址：
+**[参考文献]**
 
-<https://blog.csdn.net/ggrjake25/article/details/86537850>
+1. <https://blog.csdn.net/ggrjake25/article/details/86537850>
