--- a/_posts/Linux/2019-10-26-233.md
+++ b/_posts/Linux/2019-10-26-233.md
@@ -45,6 +45,6 @@ ProgramFilesDir（x86） REG_SZ  D:\Program Files（x86）
 
 ![](http://www.nangongyibin.com/assets/images/dim5.jpg)
 
-参考网址：
+**[参考文献]**
 
-<https://jingyan.baidu.com/article/93f9803f017e8fe0e46f55af.html>
+1. <https://jingyan.baidu.com/article/93f9803f017e8fe0e46f55af.html>
