--- a/_posts/Linux/2019-10-26-234.md
+++ b/_posts/Linux/2019-10-26-234.md
@@ -21,7 +21,7 @@ excerpt:  mysql安装出现error Nr.1045
        HKEY_LOCAL_MACHINE\SYSTEM\ControlSet001\Services\Eventlog\Application\MySQL 目录删除　　HKEY_LOCAL_MACHINE\SYSTEM\ControlSet002\Services\Eventlog\Application\MySQL 目录删除       HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\Eventlog\Application\MySQL 目录删除完成以上步骤，就可以重新安装MySQL并且进行全新配置了（注意是全新配置）
 
 
-参考网址：
+**[参考文献]**
 
-<https://jingyan.baidu.com/article/e52e36157a97c740c60c51f7.html>
+1. <https://jingyan.baidu.com/article/e52e36157a97c740c60c51f7.html>
 
