--- a/_posts/Linux/2019-10-26-241.md
+++ b/_posts/Linux/2019-10-26-241.md
@@ -113,6 +113,7 @@ excerpt:  在PC上安装Android系统的图文教程
 
 ![](http://www.nangongyibin.com/assets/images/pia25.png)
 
-参考网址：
 
-<https://www.jb51.net/os/155101.html>
+**[参考文献]**
+
+1. <https://www.jb51.net/os/155101.html>
