--- a/_posts/Linux/2019-10-26-242.md
+++ b/_posts/Linux/2019-10-26-242.md
@@ -17,8 +17,8 @@ excerpt:  QQ音乐怎么更改默认盘符下的QQMusicCache文件
 	Convert=1
 
 
-参考网址：
+**[参考文献]**
 
-<https://jingyan.baidu.com/article/acf728fd463084f8e510a380.html>
+1. <https://jingyan.baidu.com/article/acf728fd463084f8e510a380.html>
 
 
