--- a/_posts/Linux/2019-10-26-245.md
+++ b/_posts/Linux/2019-10-26-245.md
@@ -21,6 +21,7 @@ excerpt:  Win10下WindowsApps权限怎么获取？
 
 ![](http://www.nangongyibin.com/assets/images/wpg3.png)
 
-参考网址：
 
-<https://jingyan.baidu.com/article/39810a235dee3bb637fda65c.html>
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/39810a235dee3bb637fda65c.html>
