--- a/_posts/Linux/2019-10-27-249.md
+++ b/_posts/Linux/2019-10-27-249.md
@@ -10,9 +10,9 @@ excerpt:  百度网盘如何更改下载位置百度网盘更改保存位置
 
 ![](http://www.nangongyibin.com/assets/images/bdp1.jpg)
 
-参考网址：
+**[参考文献]**
 
-<https://jingyan.baidu.com/article/64d05a02a2cfd39e55f73bb6.html>
+1. <https://jingyan.baidu.com/article/64d05a02a2cfd39e55f73bb6.html>
 
 
 
