--- a/_posts/Web/Html/2019-10-25-228.md
+++ b/_posts/Web/Html/2019-10-25-228.md
@@ -14,9 +14,8 @@ excerpt:  JSTL使用问题
 	缺少jstl.jar standard.jar两个包
 
 
+**[参考文献]**
 
-参考网址：
-
-<https://blog.csdn.net/lzh657083979/article/details/76039297>
+1. <https://blog.csdn.net/lzh657083979/article/details/76039297>
 
 
