--- a/_posts/Web/Html/2019-10-27-253.md
+++ b/_posts/Web/Html/2019-10-27-253.md
@@ -13,12 +13,9 @@ excerpt:  npm配置目录
 
 
 
+**[参考文献]**
 
-
-参考网址：
-
-
-<https://blog.csdn.net/suiyuehuimou/article/details/74143436>
+1. <https://blog.csdn.net/suiyuehuimou/article/details/74143436>
 
 
 
