--- a/_posts/Web/Html/2019-09-07-126.md
+++ b/_posts/Web/Html/2019-09-07-126.md
@@ -42,6 +42,7 @@ excerpt: IntelliJ IDEA 如何新建项目和HTML、css
 
 ![](http://www.nangongyibin.com/assets/images/iw9.png)
 
-参考网址：
 
-<https://jingyan.baidu.com/article/636f38bb4ad6fed6b9461061.html>
+**[参考文献]**
+
+1. <https://jingyan.baidu.com/article/636f38bb4ad6fed6b9461061.html>
