提交部分博客

--- a/_posts/Android/Other/2019-10-26-49.md
+++ b/_posts/Android/Other/2019-10-26-49.md
@@ -19,7 +19,9 @@ excerpt:  ubuntu18.04 Android源码下载编译
 	mkdir ~/bin 
 	PATH=~/bin$PATH 
 	curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo 
-	## 如果上述 URL 不可访问，可以用下面的：
+
+#### 如果上述 URL 不可访问，可以用下面的： ####
+
 	curl https://storage-googleapis.lug.ustc.edu.cn/git-repo-downloads/repo > ~/bin/repo 
 	chmod a+x ~/bin/repo
 
@@ -75,3 +77,4 @@ excerpt:  ubuntu18.04 Android源码下载编译
 2. <https://source.android.google.cn/setup/build/requirements>
 3. <https://blog.csdn.net/lq576165360/article/details/85274133>
 4. <https://blog.csdn.net/Yoryky/article/details/81813717>
+5. [Ubantu18.04环境下编译android源码](https://blog.csdn.net/Yoryky/article/details/81813717 "Ubantu18.04环境下编译android源码")
