--- a/_posts/Android/Other/2020-01-14-51.md
+++ b/_posts/Android/Other/2020-01-14-51.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Android打包
-category: ThirdPartyService
-tags: [ThirdPartyService]
+category: Other
+tags: [Other]
 excerpt: Android打包
 ---
 
