--- a/_posts/Linux/2020-02-04-71.md
+++ b/_posts/Linux/2020-02-04-71.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:   MarkdownPad2注册码 
+title:   md语法 
 category: Linux
 tags: [Linux]
-excerpt:  MarkdownPad2注册码
+excerpt:  md语法
 ---
 
 ## 分割线 ##
