开发过程中遇到的问题记录

--- a/_posts/Android/Other/2019-08-28-23.md
+++ b/_posts/Android/Other/2019-08-28-23.md
@@ -26,3 +26,16 @@ excerpt: Sd
             Log.e(TAG, "getSize: totalSize" + totalSize);
             String usableSize = Formatter.formatFileSize(this, usableSpace);
             Log.e(TAG, "getSize: " + usableSize);
+
+## 4、在AndroidManifest文件中加入sdcard操作权限 ##
+
+
+	　　<!--在SDCard中创建与删除文件权限 -->
+	　　<uses-permissioandroid:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/> 
+	　　<!--往SDCard写入数据权限 --> 
+	　　<uses-permissionandroid:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
+
+
+**[参考文献]**
+
+1. [Android中的Environment.getExternalStorageState使用](https://blog.csdn.net/yuzhiboyi/article/details/8645730 "Android中的Environment.getExternalStorageState使用")
