遇到部分问题整理

--- a/_posts/Android/DataBase/2019-10-08-6.md
+++ b/_posts/Android/DataBase/2019-10-08-6.md
@@ -894,6 +894,7 @@ MigrationHelper 代码：
 **[参考文献]**
 
 1. <https://blog.csdn.net/qq_32175491/article/details/82913904>
+2. [GreenDao3使用教程](https://blog.csdn.net/qq_36699930/article/details/81540781 "GreenDao3使用教程")
 
 
 
