--- a/_posts/Java/Java/2020-02-08-24.md
+++ b/_posts/Java/Java/2020-02-08-24.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:   运行tomcat报Exception in thread "ContainerBackgroundProcessor[StandardEngine[Catalina]]" 
+title:   eclipse移动一整行的快捷键
 category: Java
 tags: [Java]
-excerpt:  运行tomcat报Exception in thread "ContainerBackgroundProcessor[StandardEngine[Catalina]]"
+excerpt:  eclipse移动一整行的快捷键
 ---
 
 把鼠标的光标点到你移动那一行
