--- a/_posts/Linux/2019-09-07-51.md
+++ b/_posts/Linux/2019-09-07-51.md
@@ -352,3 +352,7 @@ Fdfs_*的一些列执行脚本
 	停止tracker命令：/etc/init.d/fdfs_trackerd stop
 	关闭storage命令：/etc/init.d/fdfs_storaged stop
 	关闭nginx命令：/usr/local/nginx/sbin/nginx -s stop
+
+**[参考文献]**
+
+1. [Nginx和FastDfs完整配置过程](https://blog.csdn.net/qq_34301871/article/details/80060235 "Nginx和FastDfs完整配置过程")
