--- a/_posts/Linux/2020-02-08-83.md
+++ b/_posts/Linux/2020-02-08-83.md
@@ -8,7 +8,18 @@ excerpt:  CentOS离线安装Gitlab-ce
 
 ### 1.安装gitlab依赖包 ###
 
+①.网关 ， http ， ssh
+
 	sudo yum install -y curl policycoreutils-python openssh-server cronie
+	sudo lokkit -s http -s ssh
+
+②.邮件
+
+	sudo yum install postfix
+	sudo service postfix start
+	sudo chkconfig postfix on
+
+
 
 ### 2.官网下载对应的gitlab-ce离线包[(点此前往)](https://packages.gitlab.com/gitlab/gitlab-ce "(点此前往)") ###
 
@@ -41,6 +52,9 @@ excerpt:  CentOS离线安装Gitlab-ce
 **[参考文献]**
 
 1. [CentOS离线安装Gitlab-ce](https://blog.csdn.net/lt326030434/article/details/101294798 "CentOS离线安装Gitlab-ce")
+2. [Gitlab在centos6搭建](https://blog.csdn.net/qiuyufeng/article/details/81051327 "Gitlab在centos6搭建")
+3. [Centos 7搭建Gitlab服务器超详细](https://blog.csdn.net/tanqian351/article/details/82020523 "Centos 7搭建Gitlab服务器超详细")
+4. [Centos 7搭建Gitlab服务器超详细](https://blog.csdn.net/duyusean/article/details/80011540 "Centos 7搭建Gitlab服务器超详细")
 
 
 
