--- a/_posts/Android/NetLib/2020-02-04-8.md
+++ b/_posts/Android/NetLib/2020-02-04-8.md
@@ -38,6 +38,26 @@ excerpt: RxJava2+Retrofit2+OkHttp3的基础、封装
 			.addConverterFactory(GsonConverterFactory.create())
 			.build();
 
+a. 关于数据解析器（Converter）
+
+|  数据解析器	  |  Gradle依赖  |
+|  ----  |  ----  |
+|  Gson 	|  com.squareup.retrofit2:converter-gson:2.0.2  |
+|  Jackson	 |  com.squareup.retrofit2:converter-jackson:2.0.2  |
+|  Simple XML	 |  com.squareup.retrofit2:converter-simplexml:2.0.2  |
+|  Protobuf	 |  com.squareup.retrofit2:converter-protobuf:2.0.2  |
+|  Moshi	 |  com.squareup.retrofit2:converter-moshi:2.0.2  |
+|  Wire	 |  com.squareup.retrofit2:converter-wire:2.0.2  |
+|  Scalars	 |  com.squareup.retrofit2:converter-scalars:2.0.2  |
+
+b. 关于网络请求适配器（CallAdapter）
+
+|  网络请求适配器  |  Gradle依赖  |
+|  ----  |  ----  |
+|  guava  |  com.squareup.retrofit2:adapter-guava:2.0.2  |
+|  Java8  |  com.squareup.retrofit2:adapter-java8:2.0.2  |
+|  rxjava  |  com.squareup.retrofit2:adapter-rxjava:2.0.2  |
+
 ### 3.创建一个接口： ###
 
 定义了一个方法getTop250,使用get请求方式，加上@GET 标签，标签后面是这个接口的尾址top250，完整的地址应该是baseUrl+尾址，参数使用@Query标签，如果参数多的话可以用@QueryMap标签，接收一个Map。
@@ -300,9 +320,293 @@ excerpt: RxJava2+Retrofit2+OkHttp3的基础、封装
 
 	.addInterceptor(InterceptorUtil.LogInterceptor())//添加日志拦截器
 
+## 四、注解类型 ##
+
+![](http://www.nangongyibin.com/assets/images/Android/NetLib/2.png)
+ 
+注解说明
+
+第一类：网络请求方法
+
+![](http://www.nangongyibin.com/assets/images/Android/NetLib/3.png) 
+
+详细说明：
+
+a. @GET、@POST、@PUT、@DELETE、@HEAD
+
+以上方法分别对应 HTTP中的网络请求方式
+
+	public interface GetRequest_Interface {
+	    @GET("openapi.do?keyfrom=Yanzhikai&key=2032414398&type=data&doctype=json&version=1.1&q=car")
+	    Call<Translation>  getCall();
+	    // @GET注解的作用:采用Get方法发送网络请求
+	    // getCall() = 接收网络请求数据的方法
+	    // 其中返回类型为Call<*>，*是接收数据的类（即上面定义的Translation类）
+	}
+
+此处特意说明URL的组成：Retrofit把 网络请求的URL 分成了两部分设置：
+
+// 第1部分：在网络请求接口的注解设置
+
+	 @GET("openapi.do?keyfrom=Yanzhikai&key=2032414398&type=data&doctype=json&version=1.1&q=car")
+	Call<Translation>  getCall();
+
+// 第2部分：在创建Retrofit实例时通过.baseUrl()设置
+
+	Retrofit retrofit = new Retrofit.Builder()
+	                .baseUrl("http://fanyi.youdao.com/") //设置网络请求的Url地址
+	                .addConverterFactory(GsonConverterFactory.create()) //设置数据解析器
+	                .build();
+
+// 从上面看出：一个请求的URL可以通过 替换块 和 请求方法的参数 来进行动态的URL更新。
+// 替换块是由 被{}包裹起来的字符串构成
+// 即：Retrofit支持动态改变网络请求根目录
+
+网络请求的完整 Url =在创建Retrofit实例时通过.baseUrl()设置 +网络请求接口的注解设置（下面称 “path“ ）
+具体整合的规则如下：
+ 
+![](http://www.nangongyibin.com/assets/images/Android/NetLib/6.png) 
+
+建议采用第三种方式来配置，并尽量使用同一种路径形式。
+
+b. @HTTP
+
+作用：替换@GET、@POST、@PUT、@DELETE、@HEAD注解的作用 及 更多功能拓展
+具体使用：通过属性method、path、hasBody进行设置
+
+	public interface GetRequest_Interface {
+	    /**
+	     * method：网络请求的方法（区分大小写）
+	     * path：网络请求地址路径
+	     * hasBody：是否有请求体
+	     */
+	    @HTTP(method = "GET", path = "blog/{id}", hasBody = false)
+	    Call<ResponseBody> getCall(@Path("id") int id);
+	    // {id} 表示是一个变量
+	    // method 的值 retrofit 不会做处理，所以要自行保证准确
+	}
+
+第二类：标记
+
+![](http://www.nangongyibin.com/assets/images/Android/NetLib/4.png) 
+ 
+a. @FormUrlEncoded
+
+作用：表示发送form-encoded的数据
+每个键值对需要用@Filed来注解键名，随后的对象需要提供值。
+
+b. @Multipart
+
+作用：表示发送form-encoded的数据（适用于 有文件 上传的场景）
+每个键值对需要用@Part来注解键名，随后的对象需要提供值。
+
+具体使用如下：
+
+
+	public interface GetRequest_Interface {
+	        /**
+	         *表明是一个表单格式的请求（Content-Type:application/x-www-form-urlencoded）
+	         * <code>Field("username")</code> 表示将后面的 <code>String name</code> 中name的取值作为 username 的值
+	         */
+	        @POST("/form")
+	        @FormUrlEncoded
+	        Call<ResponseBody> testFormUrlEncoded1(@Field("username") String name, @Field("age") int age);
+	
+	        /**
+	         * {@link Part} 后面支持三种类型，{@link RequestBody}、{@link okhttp3.MultipartBody.Part} 、任意类型
+	         * 除 {@link okhttp3.MultipartBody.Part} 以外，其它类型都必须带上表单字段({@link okhttp3.MultipartBody.Part} 中已经包含了表单字段的信息)，
+	         */
+	        @POST("/form")
+	        @Multipart
+	        Call<ResponseBody> testFileUpload1(@Part("name") RequestBody name, @Part("age") RequestBody age, @Part MultipartBody.Part file);
+	
+	}
+	
+	// 具体使用
+	       GetRequest_Interface service = retrofit.create(GetRequest_Interface.class);
+	        // @FormUrlEncoded 
+	        Call<ResponseBody> call1 = service.testFormUrlEncoded1("Carson", 24);
+	
+	        //  @Multipart
+	        RequestBody name = RequestBody.create(textType, "Carson");
+	        RequestBody age = RequestBody.create(textType, "24");
+	
+	        MultipartBody.Part filePart = MultipartBody.Part.createFormData("file", "test.txt", file);
+	        Call<ResponseBody> call3 = service.testFileUpload1(name, age, filePart);
+
+第三类：网络请求参数
+
+![](http://www.nangongyibin.com/assets/images/Android/NetLib/5.png) 
+ 
+详细说明
+
+a. @Header & @Headers
+
+作用：添加请求头 &添加不固定的请求头
+
+具体使用如下：
+
+	// @Header
+	@GET("user")
+	Call<User> getUser(@Header("Authorization") String authorization)
+	
+	// @Headers
+	@Headers("Authorization: authorization")
+	@GET("user")
+	Call<User> getUser()
+
+// 以上的效果是一致的。
+// 区别在于使用场景和使用方式
+// 1\. 使用场景：@Header用于添加不固定的请求头，@Headers用于添加固定的请求头
+// 2\. 使用方式：@Header作用于方法的参数；@Headers作用于方法
+
+b. @Body
+
+作用：以 Post方式 传递 自定义数据类型 给服务器
+特别注意：如果提交的是一个Map，那么作用相当于 @Field
+不过Map要经过 FormBody.Builder 类处理成为符合 Okhttp 格式的表单，如：
+
+	FormBody.Builder builder = new FormBody.Builder();
+	builder.add("key","value");
+
+c. @Field & @FieldMap
+
+作用：发送 Post请求 时提交请求的表单字段
+
+具体使用：与 @FormUrlEncoded 注解配合使用
+
+	public interface GetRequest_Interface {
+	        /**
+	         *表明是一个表单格式的请求（Content-Type:application/x-www-form-urlencoded）
+	         * <code>Field("username")</code> 表示将后面的 <code>String name</code> 中name的取值作为 username 的值
+	         */
+	        @POST("/form")
+	        @FormUrlEncoded
+	        Call<ResponseBody> testFormUrlEncoded1(@Field("username") String name, @Field("age") int age);
+	
+	/**
+	         * Map的key作为表单的键
+	         */
+	        @POST("/form")
+	        @FormUrlEncoded
+	        Call<ResponseBody> testFormUrlEncoded2(@FieldMap Map<String, Object> map);
+	
+	}
+	
+	// 具体使用
+	         // @Field
+	        Call<ResponseBody> call1 = service.testFormUrlEncoded1("Carson", 24);
+	
+	        // @FieldMap
+	        // 实现的效果与上面相同，但要传入Map
+	        Map<String, Object> map = new HashMap<>();
+	        map.put("username", "Carson");
+	        map.put("age", 24);
+	        Call<ResponseBody> call2 = service.testFormUrlEncoded2(map);
+
+d. @Part & @PartMap
+
+作用：发送 Post请求 时提交请求的表单字段
+与@Field的区别：功能相同，但携带的参数类型更加丰富，包括数据流，所以适用于 有文件上传 的场景
+
+具体使用：与 @Multipart 注解配合使用
+
+	public interface GetRequest_Interface {
+	
+	          /**
+	         * {@link Part} 后面支持三种类型，{@link RequestBody}、{@link okhttp3.MultipartBody.Part} 、任意类型
+	         * 除 {@link okhttp3.MultipartBody.Part} 以外，其它类型都必须带上表单字段({@link okhttp3.MultipartBody.Part} 中已经包含了表单字段的信息)，
+	         */
+	        @POST("/form")
+	        @Multipart
+	        Call<ResponseBody> testFileUpload1(@Part("name") RequestBody name, @Part("age") RequestBody age, @Part MultipartBody.Part file);
+	
+	        /**
+	         * PartMap 注解支持一个Map作为参数，支持 {@link RequestBody } 类型，
+	         * 如果有其它的类型，会被{@link retrofit2.Converter}转换，如后面会介绍的 使用{@link com.google.gson.Gson} 的 {@link retrofit2.converter.gson.GsonRequestBodyConverter}
+	         * 所以{@link MultipartBody.Part} 就不适用了,所以文件只能用<b> @Part MultipartBody.Part </b>
+	         */
+	        @POST("/form")
+	        @Multipart
+	        Call<ResponseBody> testFileUpload2(@PartMap Map<String, RequestBody> args, @Part MultipartBody.Part file);
+	
+	        @POST("/form")
+	        @Multipart
+	        Call<ResponseBody> testFileUpload3(@PartMap Map<String, RequestBody> args);
+	}
+	
+	// 具体使用
+	 MediaType textType = MediaType.parse("text/plain");
+	        RequestBody name = RequestBody.create(textType, "Carson");
+	        RequestBody age = RequestBody.create(textType, "24");
+	        RequestBody file = RequestBody.create(MediaType.parse("application/octet-stream"), "这里是模拟文件的内容");
+	
+	        // @Part
+	        MultipartBody.Part filePart = MultipartBody.Part.createFormData("file", "test.txt", file);
+	        Call<ResponseBody> call3 = service.testFileUpload1(name, age, filePart);
+	        ResponseBodyPrinter.printResponseBody(call3);
+	
+	        // @PartMap
+	        // 实现和上面同样的效果
+	        Map<String, RequestBody> fileUpload2Args = new HashMap<>();
+	        fileUpload2Args.put("name", name);
+	        fileUpload2Args.put("age", age);
+	        //这里并不会被当成文件，因为没有文件名(包含在Content-Disposition请求头中)，但上面的 filePart 有
+	        //fileUpload2Args.put("file", file);
+	        Call<ResponseBody> call4 = service.testFileUpload2(fileUpload2Args, filePart); //单独处理文件
+	        ResponseBodyPrinter.printResponseBody(call4);
+	}
+
+e. @Query和@QueryMap
+
+作用：用于 @GET 方法的查询参数（Query = Url 中 ‘?’ 后面的 key-value）
+如：url = http://www.println.net/?cate=android，其中，Query = cate
+
+具体使用：配置时只需要在接口方法中增加一个参数即可：
+
+
+	   @GET("/")    
+	   Call<String> cate(@Query("cate") String cate);
+
+
+// 其使用方式同 @Field与@FieldMap，这里不作过多描述
+
+f. @Path
+
+作用：URL地址的缺省值
+
+具体使用：
+
+	public interface GetRequest_Interface {
+	
+	        @GET("users/{user}/repos")
+	        Call<ResponseBody>  getBlog（@Path("user") String user ）;
+	        // 访问的API是：https://api.github.com/users/{user}/repos
+	        // 在发起请求时， {user} 会被替换为方法的第一个参数 user（被@Path注解作用）
+	    }
+
+g. @Url
+
+作用：直接传入一个请求的 URL变量 用于URL设置
+
+具体使用：
+
+	public interface GetRequest_Interface {
+	
+	        @GET
+	        Call<ResponseBody> testUrlAndQuery(@Url String url, @Query("showAll") boolean showAll);
+	       // 当有URL注解时，@GET传入的URL就可以省略
+	       // 当GET、POST...HTTP等方法中没有设置Url时，则必须使用 {@link Url}提供
+	
+	}
+
+
+
+
 
 **[参考文献]**
 
 1. [Android版&Kotlin版RxJava2+Retrofit2+OkHttp3的基础、封装和项目中的使用](https://www.jianshu.com/p/0ad99e598dba "Android版&Kotlin版RxJava2+Retrofit2+OkHttp3的基础、封装和项目中的使用")
 2. [Retrofit2+Rxjava2+OKHttp3+RxAndroid实现网络请求的demo案例](https://blog.csdn.net/u013836857/article/details/81238689 "Retrofit2+Rxjava2+OKHttp3+RxAndroid实现网络请求的demo案例")
 3. [Android RxJava2+Retrofit2+OkHttp3 的使用一--基础篇 Retrofit2 的使用](https://www.cnblogs.com/wukong1688/p/10745942.html "Android RxJava2+Retrofit2+OkHttp3 的使用一--基础篇 Retrofit2 的使用")
+4. [Android之Retrofit详解（转载）](https://www.cnblogs.com/WUXIAOCHANG/p/10652296.html "Android之Retrofit详解（转载）")
