遇到部分问题的整理

--- a/_posts/Android/Other/2020-02-09-63.md
+++ b/_posts/Android/Other/2020-02-09-63.md
@@ -32,6 +32,7 @@ allprojects {
 **[参考文献]**
 
 1. [二、toasty的使用以及简单封装](https://www.jianshu.com/p/91d4b6d03d6d "二、toasty的使用以及简单封装")
+2. [Android 开源框架 -Toasty](https://www.cnblogs.com/tomarsNi/p/9431988.html "Android 开源框架 -Toasty")
 
 
 
